Revision history for the R/broman package
-----------------------------------------

Version 0.69-4, 2019-03-20:

  Added operators %nin%, %win%, and %wnin%.
  a %nin% b   is like !(a %in% b)
  a %win% b   is like a[a %in% b]
  a %wnin% b  is like a[a %nin% b]

  Added function spell_out() for spelling out numbers provided they are
  smallish integers. Goes with the datasets numbers and Numbers.

  Added function revgray() that's like revrainbow() but white/black.

  In dotplot(), make "Group" the default axis label whether rotated or
  not. (Was when rotate=TRUE, but not when rotate=FALSE.)

  Use Markdown throughout documentation


Version 0.68-2, 2018-07-25:

  Added function tritext(), to go with triplot(), tripoints(),
  trilines(), and triarrows(), but to add text annotations.

  Revised openfile() so that it works on Linux.


Version 0.67-4, 2017-12-08:

  Added function grayplot_na(). It's like grayplot, but includes boxes
  near the margins to show points that are missing x or y or both.

  Added function vec2string() for turning a vector into a string with
  the items separated by commas and an "and". This is for use in
  R Markdown documents, to list a series of items.

  Added function get_precision() for determining the precision of a
  number (the number of digits past the decimal point). I want to use
  this to compare two data sets with different amounts of rounding, to
  pick the more precise values.

  Added function align_vectors() for aligning two vectors using their
  names attributes.

  In grayplot(), have default be pch=21 and bg="lightblue" (that is,
  points that are lightblue with a black circle around them).


Version 0.66-2, 2017-10-24:

  Add bgcolor argument to triplot(), to have the background of the
  rectangle be gray, by default.

  Also change default background in grayplot() and theme_karl() from
  "gray80" to "gray90" (which is much less dark of a gray).

  Fix bug in dotplot() in case that y has missing values (omit them).

