@@ -13,6 +13,7 @@ export(brocolors)
 export(bromanversion)
 export(cf)
 export(chisq)
+export(ciplot)
 export(colwalpha)
 export(compare_rows)
 export(convert2hex)
