@@ -1,0 +1,58 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/ciplot.R
+\name{ciplot}
+\alias{ciplot}
+\title{Effect plot with multiple CIs for different groups}
+\usage{
+ciplot(est, se = NULL, lo = NULL, hi = NULL, SEmult = 2,
+  rotate = FALSE, ...)
+}
+\arguments{
+\item{est}{Vector of estimates}
+
+\item{se}{Vector of standard errors}
+
+\item{lo}{Vector of lower values for the intervals}
+
+\item{hi}{Vector of upper values for the intervals}
+
+\item{SEmult}{SE multiplier to create intervals}
+
+\item{rotate}{If TRUE, have group as y-axis; default (FALSE) has
+group on x-axis.}
+
+\item{...}{Optional graphics arguments}
+}
+\value{
+None.
+}
+\description{
+Uses \code{\link[=grayplot]{grayplot()}} to plot a set of confidence intervals.
+}
+\details{
+Calls \code{\link[=grayplot]{grayplot()}} with special choices of
+graphics parameters, as in \code{\link[=dotplot]{dotplot()}}.
+
+Provide either \code{se} or both \code{lo} and \code{hi}. In the case that \code{se} is
+used, the intervals will be \code{est} +/- \code{SEmult * se}.
+
+Group names are taken from the \code{names(est)}. If missing, we use capital letters.
+
+You can control the CI line widths with \code{ci_lwd} and the color of
+the CI segments with \code{ci_col}. You can control the width of the
+segments at the top and bottom with \code{ci_endseg}.
+}
+\examples{
+\dontshow{set.seed(97536917)}
+x <- rnorm(40, c(1,3))
+g <- rep(c("A", "B"), 20)
+me <- tapply(x, g, mean)
+se <- tapply(x, g, se)
+ciplot(me, se)
+ciplot(me, se, SEmult=1)
+
+}
+\seealso{
+\code{\link[=grayplot]{grayplot()}}, \code{\link[=dotplot]{dotplot()}}
+}
+\keyword{graphics}
